--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,9 @@
     "48": "icons/beasts-48.png"
   },
 
-  "permissions": ["activeTab"],
+  "permissions": [
+    "activeTab"
+  ],
 
   "browser_action": {
     "default_icon": "icons/beasts-32.png",
